drivers/base/cpu.c
@@ -387,7 +387,8 @@ int register_cpu(struct cpu *cpu, int num)
 
 	per_cpu(cpu_sys_devices, num) = &cpu->dev;
 	register_cpu_under_node(num, cpu_to_node(num));
-	dev_pm_qos_expose_latency_limit(&cpu->dev, 0);
+	dev_pm_qos_expose_latency_limit(&cpu->dev,
+					PM_QOS_RESUME_LATENCY_NO_CONSTRAINT);
 
        return cpuhp_setup_state_nocalls(CPUHP_CPUDEV_PM_PREPARE,
 				"base/cpu/dev_pm:prepare",
